--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 <p>該当する内容の電話番号におかけください。</p>
                 <!-- テーブルの装飾を適用する指定を追加 -->
                 <!-- さらにテーブルへ枠を追加する指定、行ごとの背景色が交互に変わる指定を追加 -->
-                <table class="table table-striped mt-4">
+                <table class="table table-striped table-bordered mt-4">
                     <thead>
                         <tr>
                             <th>内容</th>
